# wednesday-tts

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  handover.md  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
config/: com.anthropic.wednesday-tts.plist  com.tamm.wednesday-tts.plist  tts-config-template.json
data/: tts-dictionary.json  tts-filenames.json
docs/: architecture.md  data-flow.md  inclusive-terms.md  playback-spec.md  spatial-audio-formula.md  spatial-audio.md  streaming-stability-plan.md  voice-calibration.md  voice-pipeline-spec.md  voice-system-spec.md  wire-protocol.md
docs/normalization/: README.md  rule-backtick-identifiers.md  rule-camelcase.md  rule-dictionary.md  rule-hashes.md  rule-homographs.md  rule-http-codes.md  rule-markdown-cleanup.md  rule-numbers-units.md  rule-operators.md  rule-paths.md  rule-regex-to-speech.md  rule-symbols-tilde-percent.md  rule-urls.md  rule-versions.md
integrations/claude-code/: README.md  build.sh  hook_common.py  install.sh  permission-clear.sh  permission-flag.sh  pre-tool-speak.py  speak-response.py  tts-hook  tts-hook.swift  window_position.py
integrations/codex/: codex_notify.py
integrations/gemini-cli/: gemini-speak.py  install.sh
integrations/opencode/: wednesday-tts.js
integrations/spatial-audio/: SpatialPlayer  SpatialPlayer.swift  SpatialStream  SpatialStream.swift
scripts/: check-no-local-paths.sh  encode_voice.py  gen_voice_candidates.py  install-tts-service.ps1  restart-tts.ps1  start-tts.ps1  status-tts.ps1  stop-tts.ps1  stop-tts.sh  toggle-tts-mute.sh
src/wednesday_tts/: __init__.py  platform.py
src/wednesday_tts/client/: __init__.py  api.py
src/wednesday_tts/normalize/: __init__.py  (+21 more)
tests/: conftest.py  test_barge_in_stop.py  test_camelcase.py  test_chunking.py  test_client_api.py  test_code_blocks.py  test_codex_notify.py  test_daemon_streaming.py  test_dates.py  test_dictionary.py  test_hex_codes.py  test_homographs.py  test_hook_common.py  test_identifiers.py  test_ip_addresses.py  test_markdown.py  test_numbers.py  test_numbers_to_words.py  test_operators.py  test_paths.py  test_phone.py  test_pipeline.py  test_platform.py  test_regex_speech.py  test_sam_backend.py  test_server.py  test_tables.py  test_tts_hook_swift.py  test_urls.py  test_versions.py  test_voice_override.py
voices/dwp/: README.md
(+12 files in other folders)
