[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wednesday-tts"
version = "0.1.0"
description = "Wednesday TTS — text normalization and speech synthesis service"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
pocket = [
    "pocket-tts",
    "sounddevice",
    "soundfile",
    "numpy",
]
kokoro = [
    "kokoro",
    "sounddevice",
    "numpy",
]
sam = [
    "samtts",
    "numpy",
]
qwen3 = [
    "mlx-audio",
    "mlx",
    "sounddevice",
    "numpy",
]
test = [
    "pytest>=7",
    "pytest-cov",
    "numpy",
    "sounddevice",
    "soundfile",
    "samtts",
]
dev = [
    "wednesday-tts[test]",
    "ruff",
    "pre-commit",
    "bandit[toml]>=1.7",
]

[project.scripts]
wednesday-tts = "wednesday_tts.server.app:main"
wednesday-tts-daemon = "wednesday_tts.server.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "SIM105", "SIM108", "SIM115", "SIM117", "SIM103", "SIM201", "B023", "B904", "B905"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B102", "B108", "B310", "B324"]
